<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Newport City Waste Collections</string>
    <string name="postcode_label">Your postcode</string>
    <string name="postcode_hint">e.g. NP20 4LD</string>
    <string name="postcode_hint_text">Only works for Newport City Council postcodes (NP…).</string>
    <string name="find_address_button">Find address</string>
    <string name="address_label">Select your address</string>
    <string name="save_button">Save and start reminders</string>
    <string name="check_now_button">Check now</string>
    <string name="status_not_configured">Enter your postcode, find your address, then tap Save.</string>
</resources>
